force-app/main/default/objects/PLD_Synced_Field__mdt/PLD_Synced_Field__mdt.object-meta.xml
<CustomObject>
    <description>Fields that are to be synced between the Parent and Child leads during the Purposeful Lead Duplication process.</description>
    <label>PLD Synced Field</label>
    <pluralLabel>PLD Synced Fields</pluralLabel>
</CustomObject>