force-app/main/default/objects/PLD_Synced_Field__mdt/fields/ChildFieldName__c.field-meta.xml
<CustomField>
    <fullName>ChildFieldName__c</fullName>
    <description>API Name of the field on the child Lead to be synced.</description>
    <label>Child Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>