force-app/main/default/objects/PLD_Synced_Field__mdt/fields/MergedTextFieldSeparator__c.field-meta.xml
<CustomField>
    <fullName>MergedTextFieldSeparator__c</fullName>
    <defaultValue>&apos;;&apos;</defaultValue>
    <label>Merged Text Field Separator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>