force-app/main/default/objects/PLD_Synced_Field__mdt/fields/MergePicklist__c.field-meta.xml
<CustomField>
    <fullName>MergePicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Merges a single picklist with a multi-picklist.</description>
    <label>Merge Picklist</label>
    <type>Checkbox</type>
</CustomField>