force-app/main/default/objects/PLD_Synced_Field__mdt/fields/MergeTextField__c.field-meta.xml
<CustomField>
    <fullName>MergeTextField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Text Field</label>
    <type>Checkbox</type>
</CustomField>