force-app/main/default/objects/PLD_Synced_Field__mdt/fields/ParentFieldName__c.field-meta.xml
<CustomField>
    <fullName>ParentFieldName__c</fullName>
    <description>API Name of the field on the Parent Object</description>
    <label>Parent Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>