force-app/main/default/objects/PLD_Synced_Field__mdt/fields/SyncCondition__c.field-meta.xml
<CustomField>
    <fullName>SyncCondition__c</fullName>
    <defaultValue>&apos;Always&apos;</defaultValue>
    <description>Determines when the sync should occur.</description>
    <inlineHelpText>Always indicates the field should be synced, even when no changes in the field occur; When Changed will only sync when the field value has changed; Only on creation will only sync when the child is first created.</inlineHelpText>
    <label>Sync Condition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>When changed</fullName>
            </value>
            <value>
                <fullName>Only on creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>