force-app/main/default/objects/PLD_Synced_Field__mdt/fields/SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>SyncDirection__c</fullName>
    <description>Controls the direction of the sync.</description>
    <label>Sync Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bidirectional</fullName>
                <default>true</default>
                <label>Bidirectional</label>
            </value>
            <value>
                <fullName>To Parent</fullName>
            </value>
            <value>
                <fullName>To Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>