force-app/main/default/objects/PLD_Synced_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ChildFieldName__c</columns>
    <columns>ParentFieldName__c</columns>
    <columns>SyncCondition__c</columns>
    <columns>SyncDirection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>